--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<div style="background-color: green; color: white">
+	<div style="background-color: black; color: white">
 		<h1>Ciudad de México</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae officiis architecto, omnis eligendi pariatur possimus quisquam voluptate obcaecati laboriosam error voluptates consequuntur quis repellendus iste consequatur, <span style="color: yellow">eius facere dolorem ipsa!</span></p>
 	</div>	
